<resources>
    <string name="app_name">倒放挑战</string>

    <string name="test">测试测试</string>
    <string name="history">历史记录</string>
    <string name="edit">编辑</string>
    <string name="load_all">加载所有本地音频</string>

    <string name="next_play">正放</string>
    <string name="pre_play">倒放</string>

    <string name="select_all">全选</string>
    <string name="select_cancel">取消全选</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>

    <string name="too_short">你太短了</string>
    <string name="no_file">你还没有讲话</string>

    <string name="fast_input_label">输入法</string>
    <string name="fast_input_settings">输入法设置</string>

</resources>
