<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/MyToolBarTheme"
            android:title="@string/history"
            android:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ToolbarPopupTheme" />

        <ProgressBar
            android:id="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/cornsilk"
            app:layout_constraintBottom_toTopOf="@+id/ll_playing_bar"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/ll_playing_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="visible"
            android:background="@drawable/bg_playbar"
            app:constraint_referenced_ids="iv_pre,iv_next"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/ll_edit_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="invisible"
            android:background="@drawable/bg_playbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:constraint_referenced_ids="tv_select_all,tv_select_cancel,tv_delete,tv_cancel"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/iv_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_play"
            style="@style/text_selector"
            app:layout_constraintBottom_toBottomOf="@+id/ll_playing_bar"
            app:layout_constraintStart_toStartOf="@+id/ll_playing_bar"
            app:layout_constraintEnd_toEndOf="@id/iv_next"
            app:layout_constraintTop_toTopOf="@+id/ll_playing_bar" />

        <TextView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_play"
            style="@style/text_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_pre"
            app:layout_constraintEnd_toEndOf="@+id/ll_playing_bar"
            app:layout_constraintTop_toTopOf="@+id/ll_playing_bar" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="164dp" />

        <TextView
            android:id="@+id/tv_select_all"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            app:layout_constraintBottom_toBottomOf="@+id/ll_edit_bar"
            app:layout_constraintEnd_toStartOf="@+id/tv_select_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ll_edit_bar" />

        <TextView
            android:id="@+id/tv_select_cancel"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_cancel"
            app:layout_constraintBottom_toBottomOf="@id/ll_edit_bar"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@id/tv_select_all"
            app:layout_constraintTop_toTopOf="@+id/ll_edit_bar" />

        <TextView
            android:id="@+id/tv_delete"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@+id/ll_edit_bar"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/ll_edit_bar" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/ll_edit_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_delete"
            app:layout_constraintTop_toTopOf="@+id/ll_edit_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="276dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
